@@ -1,32 +1,29 @@
 package it.unimol.vino.services;
 
 import it.unimol.vino.dto.ContributionDTO;
-import it.unimol.vino.dto.GrapeTypeDTO;
 import it.unimol.vino.dto.UserDTO;
-import it.unimol.vino.dto.mappers.ProviderDTOMapper;
-import it.unimol.vino.exceptions.ContributionNotFoundException;
-
-import it.unimol.vino.exceptions.UserNotFoundException;
+import it.unimol.vino.dto.mappers.FullContributionDTOMapper;
+import it.unimol.vino.dto.mappers.PartialContributionDTOMapper;
+import it.unimol.vino.exceptions.*;
 import it.unimol.vino.models.entity.Contribution;
 import it.unimol.vino.models.entity.GrapeType;
-import it.unimol.vino.models.entity.User;
-import it.unimol.vino.repository.ContributionRepository;
-import it.unimol.vino.repository.UserRepository;
-import jakarta.validation.Valid;
-import org.springframework.security.core.context.SecurityContextHolder;
-import it.unimol.vino.exceptions.GrapeTypeNotFoundException;
-import it.unimol.vino.exceptions.ProviderNotFoundException;
 import it.unimol.vino.models.entity.Provider;
+import it.unimol.vino.models.entity.User;
 import it.unimol.vino.models.request.RegisterContributionRequest;
+import it.unimol.vino.repository.ContributionRepository;
 import it.unimol.vino.repository.GrapeTypeRepository;
 import it.unimol.vino.repository.ProviderRepository;
+import it.unimol.vino.repository.UserRepository;
+import jakarta.validation.Valid;
 import lombok.AllArgsConstructor;
-
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.validation.annotation.Validated;
 
+import java.io.File;
+import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 @Service
 @Validated
@@ -37,39 +34,22 @@ public class ContributionService {
     private final UserRepository userRepository;
     private final ProviderRepository provider;
     private final GrapeTypeRepository grapeType;
+    private final PartialContributionDTOMapper partialContributionDTOMapper;
+    private final FullContributionDTOMapper fullContributionDTOMapper;
 
-    private final ProviderDTOMapper providerDTOMapper;
 
     public List<ContributionDTO> getAll() {
-        return this.contribution.findAll().stream().map(
-                contribution -> ContributionDTO.builder()
-                        .id(contribution.getId())
-                        .quantity(contribution.getQuantity())
-                        .deliveryDate(contribution.getDate())
-                        .associatedGrapeType(GrapeTypeDTO.getFullGrapeTypeDTO(contribution.getAssociatedGrapeType()))
-                        .provider(providerDTOMapper.apply(contribution.getProvider()))
-                        .build()
-        ).collect(Collectors.toList());
+        return this.contribution.findAll()
+                .stream()
+                .map(partialContributionDTOMapper)
+                .toList();
     }
 
 
     public ContributionDTO get(Long id) {
-
         return this.contribution.findById(id)
-                .map(specificContribution -> ContributionDTO.builder()
-                        .id(specificContribution.getId())
-                        .origin(specificContribution.getOrigin())
-                        .country(specificContribution.getCountry())
-                        .description(specificContribution.getDescription())
-                        .quantity(specificContribution.getQuantity())
-                        .deliveryDate(specificContribution.getDate())
-                        .sugarDegree(specificContribution.getSugarDegree())
-                        .photoURL(specificContribution.getPhotoURL())
-                        .associatedGrapeType(GrapeTypeDTO.getFullGrapeTypeDTO(specificContribution.getAssociatedGrapeType()))
-                        .provider(providerDTOMapper.apply(specificContribution.getProvider()))
-                        .build())
+                .map(fullContributionDTOMapper)
                 .orElseThrow(() -> new ContributionNotFoundException("Il conferimento con id " + id + " non esiste"));
-
     }
 
     public UserDTO getSubmitter(Long contributionId) {
@@ -90,21 +70,21 @@ public class ContributionService {
                 () -> new UserNotFoundException("L'utente con email " + userEmail + " non esiste")
         );
 
-        Provider provider = this.provider.findById(request.getProviderId()).orElseThrow(
+        Provider provider = this.provider.findById(Long.parseLong(request.getProviderId())).orElseThrow(
                 () -> new ProviderNotFoundException("IL provider con ID " + request.getProviderId() + " non è stato trovato")
         );
 
-        GrapeType grapeType = this.grapeType.findById(request.getGrapeTypeId()).orElseThrow(
+        GrapeType grapeType = this.grapeType.findById(Long.parseLong(request.getGrapeTypeId())).orElseThrow(
                 () -> new GrapeTypeNotFoundException("Il tipo d'uva con ID " + request.getGrapeTypeId() + " non è stato trovato")
         );
+
 
         var contribution = Contribution.builder()
                 .origin(request.getOrigin())
                 .country(request.getCountry())
-                .photoURL(request.getPhotoURL())
                 .description(request.getDescription())
-                .sugarDegree(request.getSugarDegree())
-                .quantity(request.getQuantity())
+                .sugarDegree(Double.parseDouble(request.getSugarDegree()))
+                .quantity(Double.parseDouble(request.getQuantity()))
                 .date(request.getDate())
                 .associatedGrapeType(grapeType)
                 .provider(provider)
@@ -112,8 +92,22 @@ public class ContributionService {
                 .build();
 
         contribution.setSubmitter(user);
-        this.contribution.save(contribution);
-        return "Il conferimento è stato registrato con l'id" + contribution.getId();
-    }
 
+        if (Objects.nonNull(request.getImage())) {
+            String IMAGE_FOLDER = "/src/main/resources/static/images/";
+            StringBuilder path = new StringBuilder(System.getProperty("user.dir")).append(IMAGE_FOLDER).append(request.getImage().getOriginalFilename());
+
+            File imagesFolder = new File(System.getProperty("user.dir") + IMAGE_FOLDER);
+            if (!imagesFolder.exists()) imagesFolder.mkdirs();
+
+            try {
+                contribution.setImage(path.toString());
+                request.getImage().transferTo(new File(path.toString()));
+            } catch (IOException e) {
+                throw new ImageNotLoadedException("Errore nel caricamento dell'immagine");
+            }
+        }
+        this.contribution.save(contribution);
+        return "Il conferimento è stato registrato con l'id " + contribution.getId();
+    }
 }
